fixed nt in section titles

--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -5,13 +5,13 @@
 \usepackage{enumitem}
 \setmainlanguage{english}
 
-\title{2nt overcall after major preempt}
+\title{2\ntx\ overcall after major preempt}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% PRIORITY: 300
-%%% TITLE: 2nt overcall after major preempt
+%%% TITLE: 2\ntx\ overcall after major preempt
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{(2\majs) -- ?}
