--- a/KrysiaBartek2024/source/1ntInterference.tex
+++ b/KrysiaBartek2024/source/1ntInterference.tex
@@ -5,16 +5,16 @@
 \usepackage{enumitem}
 \setmainlanguage{english}
 
-\title{1\nt\ -- dealing with interference}
+\title{1\ntx\ -- dealing with interference}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% PRIORITY: 80
-%%% TITLE: 1\nt\ -- dealing with interference
+%%% TITLE: 1\ntx\ -- dealing with interference
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{1\nt\ -- (2\clubs) -- ?}
+\subsubsection*{1\ntx\ -- (2\clubs) -- ?}
 2\clubs\ = \clubs
 \begin{itemize}
     \item \dbl\ = Stayman
@@ -22,7 +22,7 @@
 
 SYSTEM ON
 
-\subsubsection*{1\nt\ -- (2\clubs\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\clubs\alrts) -- ?}
 2\clubs\ = 5/4 \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -30,7 +30,7 @@ SYSTEM ON
     \item 2\nt\ = minors
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\diams) -- ?}
+\subsubsection*{1\ntx\ -- (2\diams) -- ?}
 2\diams\ = \diams
 \begin{itemize}
     \item \dbl\ = negative
@@ -44,7 +44,7 @@ SYSTEM ON
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\diams\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\diams\alrts) -- ?}
 2\diams\ = 6+ \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -59,7 +59,7 @@ SYSTEM ON
 \end{itemize}
 
 
-\subsubsection*{1\nt\ -- (2\hearts) -- ?}
+\subsubsection*{1\ntx\ -- (2\hearts) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\spades\ = to play
@@ -72,7 +72,7 @@ SYSTEM ON
     \item 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\spades) -- ?}
+\subsubsection*{1\ntx\ -- (2\spades) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\nt\ = Lebensohl
@@ -84,7 +84,7 @@ SYSTEM ON
     \item 4\diams\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\nt\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\nt\alrts) -- ?}
 2\nt\ = minor
 \begin{itemize}
     \item \dbl\ = 10+
@@ -93,7 +93,7 @@ SYSTEM ON
     \item 3\hearts\ = 5+\spades, inv+
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (3\clubs) -- ?}
+\subsubsection*{1\ntx\ -- (3\clubs) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 3\diams\ = 5+\hearts, inv+
@@ -102,7 +102,7 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (3\diams) -- ?}
+\subsubsection*{1\ntx\ -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 3\hearts\ = 5+\spades, inv+
@@ -110,13 +110,13 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (\dbl\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\dbl\alrts) -- ?}
 \dbl\ artificial
 
 SYSTEM ON
 
 
-\subsubsection*{1\nt\ -- (\dbl) -- ?}
+\subsubsection*{1\ntx\ -- (\dbl) -- ?}
 \dbl\ = penalty
 \begin{itemize}
     \item \pass\ = forces \rdbl
@@ -124,7 +124,7 @@ SYSTEM ON
     \item 2\anysuit{x}\ = forces \anysuit{x+1}
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (\dbl) -- P\alrts\ -- (P)\\
+\subsubsection*{1\ntx\ -- (\dbl) -- P\alrts\ -- (P)\\
                 \rdbl\ -- (P) -- ?}
 \begin{itemize}
     \item \pass\ = penalty
