--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -16,9 +16,9 @@
 \begin{document}
 \maketitle
 
-\section{ 1\nt\ -- dealing with interference }
+\section{ 1\ntx\ -- dealing with interference }
 
-\subsubsection*{1\nt\ -- (2\clubs) -- ?}
+\subsubsection*{1\ntx\ -- (2\clubs) -- ?}
 2\clubs\ = \clubs
 \begin{itemize}
     \item \dbl\ = Stayman
@@ -26,7 +26,7 @@
 
 SYSTEM ON
 
-\subsubsection*{1\nt\ -- (2\clubs\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\clubs\alrts) -- ?}
 2\clubs\ = 5/4 \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -34,7 +34,7 @@ SYSTEM ON
     \item 2\nt\ = minors
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\diams) -- ?}
+\subsubsection*{1\ntx\ -- (2\diams) -- ?}
 2\diams\ = \diams
 \begin{itemize}
     \item \dbl\ = negative
@@ -48,7 +48,7 @@ SYSTEM ON
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\diams\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\diams\alrts) -- ?}
 2\diams\ = 6+ \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -63,7 +63,7 @@ SYSTEM ON
 \end{itemize}
 
 
-\subsubsection*{1\nt\ -- (2\hearts) -- ?}
+\subsubsection*{1\ntx\ -- (2\hearts) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\spades\ = to play
@@ -76,7 +76,7 @@ SYSTEM ON
     \item 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\spades) -- ?}
+\subsubsection*{1\ntx\ -- (2\spades) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\nt\ = Lebensohl
@@ -88,7 +88,7 @@ SYSTEM ON
     \item 4\diams\ = Texas
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (2\nt\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (2\nt\alrts) -- ?}
 2\nt\ = minor
 \begin{itemize}
     \item \dbl\ = 10+
@@ -97,7 +97,7 @@ SYSTEM ON
     \item 3\hearts\ = 5+\spades, inv+
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (3\clubs) -- ?}
+\subsubsection*{1\ntx\ -- (3\clubs) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 3\diams\ = 5+\hearts, inv+
@@ -106,7 +106,7 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (3\diams) -- ?}
+\subsubsection*{1\ntx\ -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item 3\hearts\ = 5+\spades, inv+
@@ -114,13 +114,13 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (\dbl\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\dbl\alrts) -- ?}
 \dbl\ artificial
 
 SYSTEM ON
 
 
-\subsubsection*{1\nt\ -- (\dbl) -- ?}
+\subsubsection*{1\ntx\ -- (\dbl) -- ?}
 \dbl\ = penalty
 \begin{itemize}
     \item \pass\ = forces \rdbl
@@ -128,7 +128,7 @@ SYSTEM ON
     \item 2\anysuit{x}\ = forces \anysuit{x+1}
 \end{itemize}
 
-\subsubsection*{1\nt\ -- (\dbl) -- P\alrts\ -- (P)\\
+\subsubsection*{1\ntx\ -- (\dbl) -- P\alrts\ -- (P)\\
                 \rdbl\ -- (P) -- ?}
 \begin{itemize}
     \item \pass\ = penalty
@@ -152,7 +152,7 @@ SYSTEM ON
     \item 2\spades\ = 4\spades, (18)19+
 \end{itemize}
 
-\section{ 2nt overcall after major preempt }
+\section{ 2\ntx\ overcall after major preempt }
 
 \subsubsection*{(2\majs) -- ?}
 \begin{itemize}
