preempt2nt update

--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -19,14 +19,23 @@
     \item 2\nt\ = 16-18 BAL, promises \majs\ stopper
 \end{itemize}
 
+\subsubsection*{(2\hearts) -- 2\ntx\ -- (P) -- ?}
+\begin{itemize}
+    \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
+    \item 3\diams\ = 4\spades \gf
+    \item 3\hearts\ = forces 3\spades, weak or \gf
+    \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
+    \item 3\nt\ = to play
+    \item 4\clubs\ = 5/5 \clubs\spades, may have shortness
+    \item 4\diams\ = 5/5 \diams\spades, may have shortness
+    \item 4\hearts\ = 6+\spades
+    \item 4\spades\ = minors
+    \item 4\nt\ = invite 15-16
+\end{itemize}
+
+TBD
+
 %%% SYSTEM END %%%
 
-\section{Examples}
-
-\begin{enumerate}
-    \item
-        
-        
-\end{enumerate}
 
 \end{document}
