--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -73,7 +73,7 @@
 \newcommand{\addhcp}[1]{\color{JungleGreen}\link{\textbf{\large{#1}}}\color{black}}
 \newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}}
 \newcommand{\mins}{\textbf{m}}
-\newcommand{\majs}{\textbf{M}}
+\newcommand{\majs}{\textbf{\small{M}}}
 \newcommand{\alrts}{\textsuperscript{\textcolor{red}{A}}}
 
 \DeclareFloatingEnvironment[
