--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -16,6 +16,112 @@
 \begin{document}
 \maketitle
 
+\section{ 1\mins\ opening }
+
+\subsubsection*{1\clubs\ -- ?}
+\begin{itemize}
+    \item 1\diams\ = 0-6
+    \item 1\hearts\ = 4+\hearts
+    \item 1\spades\ = 4+\spades
+    \item 1\ntx\ = 7-10, no 4\majs
+    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\diams\ = no 4\majs, 5+\diams, \gf
+    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\spades\ = 11+ BAL, no 4\majs
+    \item 2\ntx\ = 11-12 BAL
+    \item 3\nt\ = 15-17 BAL
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- ?}
+\begin{itemize}
+    \item 
+\end{itemize}
+
+TBD
+
+\section{ 1\ntx\ opening }
+
+1\nt\ opening = (14)15-17 BAL
+
+\subsubsection*{1\ntx\ -- ?}
+\begin{itemize}
+    \item 2\clubs\ = Stayman
+    \item 2\diams\ = forces 2\hearts
+    \item 2\hearts\ = forces 2\spades
+    \item 2\spades\ = inv or $\rightarrow$ \clubs
+    \item 2\nt\ = $\rightarrow$ \diams
+    \item 3\clubs\ = Puppet Stayman
+    \item 3\diams\ = 55\minor
+    \item 3\hearts\ = 3-\spades1-\hearts, 54\minor
+    \item 3\spades\ = 3-\hearts1-\spades, 54\minor
+    \item 3\nt\ = to play
+    \item 4\clubs\ = 55\major
+    \item 4\diams, 4\hearts\ = Texas
+    \item 4\nt\ = Quantitative
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = 14-15(16)
+    \item 3\clubs\ = (16)17
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\ntx \\ ?}
+\begin{itemize}
+    \item 3\clubs\ = superaccept
+    \item 3\diams\ = accept
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 3\hearts \\ ?}
+\begin{itemize}
+    \item 3\spades\ = NAT
+    \item 3\nt\ = to play
+    \item 4\hearts\ = exclusion, choose \minor
+    \item 4\nt\ = choose \minor
+\end{itemize}
+
+\subsubsection*{Smolen \\
+                1\ntx\ -- 2\clubs \\
+                2\diams\ -- ?}
+\begin{itemize}
+    \item 2\hearts\ = 5\hearts4\spades, to play
+    \item 2\spades\ = 5\spades4\hearts, to play
+    \item 3\hearts\ = 5\spades4\hearts, \gf
+    \item 3\spades\ = 5\hearts4\spades, \gf
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\diams \\
+                2\hearts\ -- ?}
+\begin{itemize}
+    \item 2\spades\ = 5\hearts4\spades, inv
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\hearts \\
+                2\spades\ -- ?}
+\begin{itemize}
+    \item 3\hearts\ = 5\spades4\hearts, inv
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\diams \\
+                2\hearts\ -- 2\spades \\
+                ?}
+\begin{itemize}
+    \item \pass, 2\nt, 3\hearts\ = to play
+    \item 3\nt, 4\hearts, 4\spades\ = to play
+\end{itemize}
+
+\subsubsection*{1\ntx\ -- 2\hearts \\
+                2\spades\ -- 3\hearts \\
+                ?}
+\begin{itemize}
+    \item \pass, 3\spades\ = to play
+    \item 3\nt, 4\hearts, 4\spades\ = to play
+\end{itemize}
+
+\section{ Overcalling 1\ntx }
+
+TBD
+
 \section{ 1\ntx\ -- dealing with interference }
 
 \subsubsection*{1\ntx\ -- (2\clubs) -- ?}
@@ -137,6 +243,14 @@ SYSTEM ON
     \item 2\hearts\ = 4\hearts\ + 4\spades
 \end{itemize}
 
+\section{ 2\ntx\ opening }
+
+TBD
+
+\section{ Drury }
+
+TBD
+
 \section{ Reverses, jump shifts and jump reverses }
 
 \subsubsection*{1\anysuit{x}\ -- 1\anysuit{y}\ -- ?}
@@ -151,6 +265,207 @@ SYSTEM ON
     \item 1\spades\ = 4\spades, 12-17
     \item 2\spades\ = 4\spades, (18)19+
 \end{itemize}
+
+\section{ Preempt opening }
+
+TBD
+
+\section{ Acol 2{\color{OliveGreen}\clubsuit} }
+
+2\clubs\ opening = 23+ HCP or 9.5 winning tricks
+
+\subsubsection*{2\clubs\ -- ?}
+\begin{itemize}
+    \item 2\diams\ = positive 4+, \gf
+    \item 2\hearts\ = negative 3-
+    \item 2\spades, 3\clubs, 3\diams = own suit 5+
+    \item 2\nt\ = own suit (\hearts) 5+
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\hearts \\ ?}
+\begin{itemize}
+    \item \pass\ = good \hearts
+    \item 2\spades\ = 5+, \fonce
+    \item 2\nt\ = min BAL, \nf
+\end{itemize}
+
+any other bid = \gf
+
+\subsubsection*{2\clubs\ -- 2\diams \\ ?}
+\begin{itemize}
+    \item 2\nt\ = min BAL
+    \item 2\hearts, 2\spades, 3\clubs, 3\diams = 5+, UNBAL
+    \item 3\hearts, 3\spades, 4\clubs, 4\diams = suit fixed
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams \\ 2\nt\ -- ?}
+System as after 2\nt\ opening
+
+\subsubsection*{2\clubs\ -- 2\diams \\ 2\hearts\ -- ?}
+\begin{itemize}
+    \item 3\hearts\ = fit
+    \item 3\spades\ = no fit, relay
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams \\ 2\spades\ -- ?}
+\begin{itemize}
+    \item 2\nt\ = no fit, relay
+    \item 3\spades\ = fit
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams \\ 
+                2\hearts\ -- 2\spades \\
+                ?}
+\begin{itemize}
+    \item 2\nt\ = 5\hearts + 4\clubs
+    \item 3\clubs\ = 5\hearts + 4\diams
+    \item 3\diams\ = 6+\hearts
+    \item 3\hearts\ = 5\hearts + 4\spades
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- 2\diams \\ 
+                2\spades\ -- 2\ntx \\
+                ?}
+\begin{itemize}
+    \item 3\clubs\ = 5\spades + 4\diams
+    \item 3\diams\ = 5\spades + 4\hearts
+    \item 3\hearts\ = 6+\spades
+    \item 3\spades\ = 5\spades + 4\clubs
+\end{itemize}
+
+\subsubsection*{Acol interference\\
+                2\clubs\ -- (\anysuit{x}) -- ?}
+\begin{itemize}
+    \item \dbl\ = negative
+    \item \pass\ = positive
+\end{itemize}
+
+\section{ Dealing with preempts }
+
+TBD
+
+\section{ Rebid with 3-card support }
+
+TBD
+
+\section{ Ask LSF }
+
+\subsubsection*{All basic ASK LSF sequences:}
+\begin{itemize}
+    \item 1\majs\ -- 2\majs\ \\ 2\majs+1\alrts
+    \item 1\minor\ -- 1\majs\ \\ 2\majs\ -- 2\majs+1\alrts
+    \item 1\majs\ -- 2\anysuit{x} \\ 2\majs\ -- 2\majs+1\alrts
+    \item 1\minor\ -- 1\majs \\ 3\majs\ -- 3\majs+1\alrts
+\end{itemize}
+
+More in: \textbf{mini splinter} and \textbf{responding to partner's preempt}.
+
+\subsubsection*{Answering:}
+
+no shortness / lowest shortness / medium shortness / (highest shortness)
+
+\section{ Gazilli }
+
+\subsubsection*{1\hearts\ -- 1\spades\ \\ ?}
+\begin{itemize}
+    \item 2\clubs\ = 5\hearts\clubs\ 11-15 OR 16+ HCP \fonce
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 1\ntx\ \\ ?}
+\begin{itemize}
+    \item 2\clubs\ = 5\hearts\clubs\ 11-15 OR 16+ HCP \fonce
+    \item 2\diams\ = 5\hearts4\diams\ 11-15
+    \item 2\hearts\ = 11-15
+    \item 2\spades\ = 6\hearts5\spades\ \gf
+    \item 2\ntx\ = 6\hearts5\minor\ \gf
+    \item 3\clubs\ = 5\hearts5\clubs\ \gf
+    \item 3\diams\ = 5\hearts5\diams\ \gf
+    \item 3\hearts\ = fixes \hearts\ \gf
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 1\ntx\ \\ ?}
+\begin{itemize}
+    \item \pass\ = 5332 12-14
+    \item 2\clubs\ = 5\spades\clubs\ 11-15 OR 16+ HCP \fonce
+    \item 2\diams\ = 5\spades4\diams\ 11-15
+    \item 2\hearts\ = 5\spades4\hearts 11-15
+    \item 2\spades\ = 11-15
+    \item 2\ntx\ = 6\spades5\minor\ \gf
+    \item 3\clubs\ = 5\spades5\clubs\ \gf
+    \item 3\diams\ = 5\spades5\diams\ \gf
+    \item 3\hearts\ = 6\spades5\hearts\ \gf
+    \item 3\spades\ = fixes \spades\ \gf
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- ?}
+\begin{itemize}
+    \item \diams\ = 8+
+    \item \hearts\ = 2\hearts\ 5-7
+    \item \spades\ = good 5\spades\ 5-7
+    \item 2\ntx\ = 1-\hearts\ 5-7
+    \item 3\clubs\ = 6+\clubs\ 5-7
+    \item 3\diams\ = 6+\diams\ 5-7
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 1\ntx\ \\ 2\clubs\ -- ?}
+\begin{itemize}
+    \item 2\diams = 8+
+    \item 2\hearts = 2-3\hearts\ 5-7
+    \item 2\spades = 55\minor\ 5-7
+    \item 2\ntx = 1-\hearts\ 5-7
+    \item 3\clubs = 6+\clubs\ 5-7
+    \item 3\diams = 6+\diams\ 5-7
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 1\ntx\ \\ 2\clubs\ -- ?}
+\begin{itemize}
+    \item 2\diams\ = 8+
+    \item 2\hearts\ = 5\hearts\ 5-7
+    \item 2\spades\ = 2-3\spades\ 5-7
+    \item 2\ntx\ = 1-\spades\ 5-7
+    \item 3\clubs\ = 6+\clubs\ 5-7
+    \item 3\diams\ = 6+\diams\ 5-7
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- 2\diams \\ ?}
+\begin{itemize}
+    \item 2\hearts\ = 5\hearts4\clubs\ 11-15
+    \item 2\spades = 5\hearts, =3\spades\ 16+
+    \item 2\ntx\ = 5332 18-20
+    \item 3\clubs\ = 5\hearts4\clubs\ 16+
+    \item 3\diams\ = 5\hearts4\diams\ 16+
+    \item 3\hearts\ = 6\hearts\ 16+
+    \item 3\spades\ = 5\hearts4\spades\ \gf
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 1\ntx\ \\ 2\clubs\ -- 2\diams \\ ?}
+\begin{itemize}
+    \item 2\hearts\ = 5\hearts4\clubs\ 11-15
+    \item 2\spades\ = 5\hearts4\spades\ 16+
+    \item 2\ntx\ = 5332 18-20
+    \item 3\clubs\ = 5\hearts4\clubs\ 16+
+    \item 3\diams\ = 5\hearts4\diams\ 16+
+    \item 3\hearts\ = 6\hearts\ 16+
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 1\ntx\ \\ 2\clubs\ -- 2\diams \\ ?}
+\begin{itemize}
+    \item 2\hearts\ = 5\spades4\hearts\ 16+
+    \item 2\spades\ = 5\spades4\clubs\ 11-15
+    \item 2\ntx\ = 5332 18-20
+    \item 3\clubs\ = 5\spades4\clubs\ 16+
+    \item 3\diams\ = 5\spades4\diams\ 16+
+    \item 3\hearts\ = 5\spades4\hearts\ 16+
+    \item 3\spades\ = 6\spades\ 16+
+\end{itemize}
+
+\section{ Mini Splinter }
+
+TBD
+
+\section{ Transfers after 1\majs\ (\dbl) }
+
+TBD
 
 \section{ 2\ntx\ overcall after major preempt }
 
@@ -170,8 +485,20 @@ SYSTEM ON
     \item 4\diams\ = 5/5 \diams\spades, may have shortness
     \item 4\hearts\ = 6+\spades
     \item 4\spades\ = minors
-    \item 4\nt\ = invite 15-16
+    \item 4\nt\ = Quantitative
 \end{itemize}
+
+TBD
+
+\section{ Overcalling 2\ntx }
+
+TBD
+
+\section{ Dealing with Multi/Wilkosz }
+
+TBD
+
+\section{ Other }
 
 TBD
 
