--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -30,7 +30,7 @@
     \item 4\diams\ = 5/5 \diams\spades, may have shortness
     \item 4\hearts\ = 6+\spades
     \item 4\spades\ = minors
-    \item 4\nt\ = invite 15-16
+    \item 4\nt\ = Quantitative
 \end{itemize}
 
 TBD
