--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -120,7 +120,36 @@ TBD
 
 \section{ Overcalling 1\ntx }
 
-TBD
+\subsubsection*{(1\ntx) -- ?}
+\begin{itemize}
+    \item \dbl\ = 5\minor\ + 4\major
+    \item 2\clubs\ = 54 \major
+    \item 2\diams\ = 6+ \major
+    \item 2\hearts\ = 5\hearts\ + 4\minor
+    \item 2\spades\ = 5\spades\ + 4\minor
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- \dbl\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\clubs\ = \pass/correct
+    \item 2\diams\ = own suit
+    \item 2\hearts\ = \pass/correct
+    \item 2\spades\ = own suit
+    \item 2\nt\ = show minor
+    \item 3\diams\ = show major
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- 2\clubs\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\diams\ = show better major
+    \item 2\hearts, 2\spades\ = preference
+\end{itemize}
+
+\subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
+\begin{itemize}
+    \item 2\hearts\ = \pass/correct
+    \item 2\spades\ = inv with \hearts
+\end{itemize}
 
 \section{ 1\ntx\ -- dealing with interference }
 
