--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -32,12 +32,37 @@
     \item 3\nt\ = 15-17 BAL
 \end{itemize}
 
-\subsubsection*{1\clubs\ -- ?}
+\subsubsection*{1\diams\ -- ?}
 \begin{itemize}
-    \item 
+    \item 1\hearts\ = 4+\hearts
+    \item 1\spades\ = 4+\spades
+    \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
+    \item 2\clubs\ = 12-14 BAL or \clubs, \gf
+    \item 2\diams\ = no 4\majs, 4+\diams, \gf
+    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\spades\ = 11+ BAL, no 4\majs
+    \item 2\ntx\ = 11-12 BAL
+    \item 3\nt\ = 15-17 BAL
 \end{itemize}
 
-TBD
+\subsubsection*{1\clubs\ -- 2\clubs \\ ?}
+\begin{itemize}
+    \item 2\diams\ = BAL
+    \item 2\hearts\ = 5\clubs4\hearts\ UNBAL
+    \item 2\spades\ = 5\clubs4\spades\ UNBAL
+    \item 2\nt\ = 5\clubs4\diams\ UNBAL
+    \item 3\clubs\ = \clubs\ UNBAL
+\end{itemize}
+
+\subsubsection*{1\diams\ -- 2\diams \\ ?}
+\begin{itemize}
+    \item 2\hearts\ = \hearts\ stopper
+    \item 2\spades\ = \spades\ stopper
+    \item 2\nt\ = \clubs\ stopper
+    \item 3\clubs\ = sign off (treshold for invite)
+\end{itemize}
+
+bidding higher suit denies lower stopper
 
 \section{ 1\ntx\ opening }
 
