--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -60,6 +60,42 @@
 
 bidding higher suit denies lower stopper
 
+\subsubsection*{1\minor\ -- 2\hearts \\ ?}
+\begin{itemize}
+    \item 2\nt\ = ASK LSF
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = BAL min
+    \item 3\clubs\ = 5+\clubs\ min
+    \item 3\diams\ = 5+\diams\ \gf
+    \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
+    \item 3\spades\ = 1-\spades, 5+\clubs\ \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\diams\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = BAL min
+    \item 3\clubs\ = 4+\clubs\ min
+    \item 3\diams\ = 5+\diams\ min
+    \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
+    \item 3\spades\ = 1-\spades, 5+\diams\ \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{Two way checkback}
+
+After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
+1\clubs -- 1\diams = negative).
+
+\subsubsection*{1\anysuit{x}\ -- 1\anysuit{y} \\ 1\anysuit{z} -- ?}
+\begin{itemize}
+    \item 2\clubs\ = any invite, forces 2\diams
+    \item 2\diams\ = any \gf
+\end{itemize}
+
 %%% SYSTEM END %%%
 
 
