--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -14,7 +14,43 @@
 %%% TITLE: 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-TBD
+2\nt\alrts opening = 21-22 BAL, may have 5\majs
+
+\subsubsection*{2\ntx\ -- ?}
+\begin{itemize}
+    \item 3\clubs\ = Puppet Stayman
+    \item 3\diams\ = forces 3\hearts, \gf
+    \item 3\hearts\ = forces 3\spades, \gf
+    \item 3\spades\ = forces 3\nt
+    \item 3\nt\ = 5\spades4\hearts
+    \item 4\clubs\ = 55 \majs
+    \item 4\diams, 4\hearts\ = Texas
+    \item 4\nt\ = Quantitative
+\end{itemize}
+
+% should 3s and 3nt be switched?
+\subsubsection*{2\ntx\ -- 3\diams \\ ?}
+\begin{itemize}
+    \item 3\hearts\ = =2\hearts
+    \item 3\spades\ = 4+\hearts, cue bid
+    \item 3\nt\ = =3\spades
+    \item 4\clubs, 4\diams\ = 4+\hearts, cue bid
+\end{itemize}
+
+\subsubsection*{2\ntx\ -- 3\hearts \\ ?}
+\begin{itemize}
+    \item 3\spades\ = =2\spades
+    \item 3\nt\ = =3\spades
+    \item 4\clubs, 4\diams\ = 4+\spades, cue bid
+\end{itemize}
+
+\subsubsection*{2\ntx\ -- 3\spades \\ 3\nt\ -- ?}
+\begin{itemize}
+    \item 4\clubs\ = 6+\clubs
+    \item 4\diams\ = 6+\diams
+    \item 4\hearts\ = 54\minor 1-\hearts
+    \item 4\spades\ = 54\minor 1-\spades
+\end{itemize}
 
 %%% SYSTEM END %%%
 
