--- a/KrysiaBartek2024/source/reverses.tex
+++ b/KrysiaBartek2024/source/reverses.tex
@@ -69,7 +69,7 @@
     below this bid, they can bid 2\nt\ or support for the responder's suit. All those bids are \nf.
 \end{itemize}
 
-\section{Examples: opener's hand}
+\subsubsection*{Examples: opener's hand}
 
 \begin{enumerate}
     \item
@@ -83,7 +83,7 @@
         \cihandp{7}{AQT42}{2}{AKQT63}{15}
         Open 1\clubs, rebid 2\hearts\ and then bid again to show 5th \hearts.
     \item 
-        You open 1\diams\ . Partner rebids 1\spades. \\
+        You open 1\diams. Partner rebids 1\spades. \\
         \cihandp{J4}{AQT2}{AJ983}{AQ}{18}
         The hand is strong enough to reverse, but
         it is better to bid 2\nt\ showing balanced hand. We have two club stoppers. If we had no
@@ -92,13 +92,13 @@
         \cihandp{5}{A4}{KJ863}{AKQ63}{17}
         This hand is not strong enough to jump shift. Open 1\diams\ and rebid 2\clubs.
     \item
-        You open 1\clubs\ . Partner rebids 1\spades. \\
+        You open 1\clubs. Partner rebids 1\spades. \\
         \cihandp{4}{42}{AK2}{AKQ9732}{16}
         Jump reverse to 3\diams\ single suited \clubs\ hand and \gf.
         
 \end{enumerate}
 
-\section{Examples: responder's hand}
+\subsubsection*{Examples: responder's hand}
 \begin{enumerate}
     \item
         Partner opened 1\diams, you bid 1\spades, partner rebid 2\hearts. \\
