--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -64,6 +64,42 @@
 
 bidding higher suit denies lower stopper
 
+\subsubsection*{1\minor\ -- 2\hearts \\ ?}
+\begin{itemize}
+    \item 2\nt\ = ASK LSF
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = BAL min
+    \item 3\clubs\ = 5+\clubs\ min
+    \item 3\diams\ = 5+\diams\ \gf
+    \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
+    \item 3\spades\ = 1-\spades, 5+\clubs\ \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{1\diams\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = BAL min
+    \item 3\clubs\ = 4+\clubs\ min
+    \item 3\diams\ = 5+\diams\ min
+    \item 3\hearts\ = 1-\hearts, 5+\diams\ \gf
+    \item 3\spades\ = 1-\spades, 5+\diams\ \gf
+    \item 3\nt\ = to play
+\end{itemize}
+
+\subsubsection*{Two way checkback}
+
+After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
+1\clubs -- 1\diams = negative).
+
+\subsubsection*{1\anysuit{x}\ -- 1\anysuit{y} \\ 1\anysuit{z} -- ?}
+\begin{itemize}
+    \item 2\clubs\ = any invite, forces 2\diams
+    \item 2\diams\ = any \gf
+\end{itemize}
+
 \section{ 1\ntx\ opening }
 
 1\nt\ opening = (14)15-17 BAL
@@ -299,7 +335,43 @@ SYSTEM ON
 
 \section{ 2\ntx\ opening }
 
-TBD
+2\nt\alrts opening = 21-22 BAL, may have 5\majs
+
+\subsubsection*{2\ntx\ -- ?}
+\begin{itemize}
+    \item 3\clubs\ = Puppet Stayman
+    \item 3\diams\ = forces 3\hearts, \gf
+    \item 3\hearts\ = forces 3\spades, \gf
+    \item 3\spades\ = forces 3\nt
+    \item 3\nt\ = 5\spades4\hearts
+    \item 4\clubs\ = 55 \majs
+    \item 4\diams, 4\hearts\ = Texas
+    \item 4\nt\ = Quantitative
+\end{itemize}
+
+% should 3s and 3nt be switched?
+\subsubsection*{2\ntx\ -- 3\diams \\ ?}
+\begin{itemize}
+    \item 3\hearts\ = =2\hearts
+    \item 3\spades\ = 4+\hearts, cue bid
+    \item 3\nt\ = =3\spades
+    \item 4\clubs, 4\diams\ = 4+\hearts, cue bid
+\end{itemize}
+
+\subsubsection*{2\ntx\ -- 3\hearts \\ ?}
+\begin{itemize}
+    \item 3\spades\ = =2\spades
+    \item 3\nt\ = =3\spades
+    \item 4\clubs, 4\diams\ = 4+\spades, cue bid
+\end{itemize}
+
+\subsubsection*{2\ntx\ -- 3\spades \\ 3\nt\ -- ?}
+\begin{itemize}
+    \item 4\clubs\ = 6+\clubs
+    \item 4\diams\ = 6+\diams
+    \item 4\hearts\ = 54\minor 1-\hearts
+    \item 4\spades\ = 54\minor 1-\spades
+\end{itemize}
 
 \section{ Drury }
 
@@ -513,9 +585,47 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
     \item 3\spades\ = 6\spades\ 16+
 \end{itemize}
 
-\section{ Mini Splinter }
+\section{ Mini Splinters }
 
-TBD
+any shortness 9-11, 4-card support, not \gf!
+
+\subsubsection*{1\hearts\ -- ?}
+\begin{itemize}
+    \item 2\spades\ = mini splinter
+    \item 2\nt\ = inv + fit
+\end{itemize}
+
+\subsubsection*{1\spades\ -- ?}
+\begin{itemize}
+    \item 2\nt\ = mini splinter
+    \item 3\hearts\ = inv + fit
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 2\spades \\ ?}
+\begin{itemize}
+    \item 2\nt\ = ASK LSF
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 2\nt \\ ?}
+\begin{itemize}
+    \item 3\clubs\ = ASK LSF
+\end{itemize}
+
+\subsubsection*{1\hearts\ -- 2\spades \\ 2\nt\ -- ?}
+\begin{itemize}
+    \item 3\clubs\ = \clubs\ shortness
+    \item 3\diams\ = \diams\ shortness
+    \item 3\hearts\ = \spades\ shortness
+    \item 3\spades\ = \spades\ shortness \gf\ (max)
+\end{itemize}
+
+\subsubsection*{1\spades\ -- 2\nt \\ 3\clubs\ -- ?}
+\begin{itemize}
+    \item 3\diams\ = \clubs\ shortness
+    \item 3\hearts\ = \diams\ shortness
+    \item 3\spades\ = \hearts\ shortness
+    \item 3\nt\ = \hearts\ shortness \gf\ (max)
+\end{itemize}
 
 \section{ Transfers after 1\majs\ (\dbl) }
 
@@ -554,6 +664,30 @@ TBD
 
 \section{ Other }
 
-TBD
+\subsubsection*{1\clubs\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \clubs\spades, choose
+    \item 2\nt\ = \clubs\diams, choose
+    \item 3\clubs\ = to play
+\end{itemize}
+
+\subsubsection*{1\clubs\ -- (1\spades) -- P -- (2\spades) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \clubs\hearts, choose
+    \item 2\nt\ = \clubs\diams, choose
+    \item 3\clubs\ = to play
+\end{itemize}
+
+\subsubsection*{1\diams\ -- (1\spades) -- P -- (2\spades) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \diams\hearts, choose
+    \item 3\clubs\ = \clubs\diams, choose
+\end{itemize}
+
+\subsubsection*{1\diams\ -- (1\hearts) -- P -- (2\hearts) \\ ?}
+\begin{itemize}
+    \item \dbl\ = \diams\spades, choose
+    \item 3\clubs\ = \clubs\diams, choose
+\end{itemize}
 
 \end{document}
