--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -48,8 +48,8 @@
 \begin{itemize}
     \item 4\clubs\ = 6+\clubs
     \item 4\diams\ = 6+\diams
-    \item 4\hearts\ = 54\minor 1-\hearts
-    \item 4\spades\ = 54\minor 1-\spades
+    \item 4\hearts\ = 54\minor\ 1-\hearts
+    \item 4\spades\ = 54\minor\ 1-\spades
 \end{itemize}
 
 %%% SYSTEM END %%%
