--- a/KrysiaBartek2024/source/SYSTEM.tex
+++ b/KrysiaBartek2024/source/SYSTEM.tex
@@ -26,7 +26,7 @@
     \item 1\ntx\ = 7-10, no 4\majs
     \item 2\clubs\ = 12-14 BAL or \clubs, \gf
     \item 2\diams\ = no 4\majs, 5+\diams, \gf
-    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ BAL, no 4\majs
     \item 2\ntx\ = 11-12 BAL
     \item 3\nt\ = 15-17 BAL
@@ -39,7 +39,7 @@
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
     \item 2\clubs\ = 12-14 BAL or \clubs, \gf
     \item 2\diams\ = no 4\majs, 4+\diams, \gf
-    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ BAL, no 4\majs
     \item 2\ntx\ = 11-12 BAL
     \item 3\nt\ = 15-17 BAL
@@ -369,8 +369,8 @@ SYSTEM ON
 \begin{itemize}
     \item 4\clubs\ = 6+\clubs
     \item 4\diams\ = 6+\diams
-    \item 4\hearts\ = 54\minor 1-\hearts
-    \item 4\spades\ = 54\minor 1-\spades
+    \item 4\hearts\ = 54\minor\ 1-\hearts
+    \item 4\spades\ = 54\minor\ 1-\spades
 \end{itemize}
 
 \section{ Drury }
@@ -453,10 +453,10 @@ System as after 2\nt\ opening
                 2\spades\ -- 2\ntx \\
                 ?}
 \begin{itemize}
-    \item 3\clubs\ = 5\spades + 4\diams
-    \item 3\diams\ = 5\spades + 4\hearts
+    \item 3\clubs\ = 5\spades\ + 4\diams
+    \item 3\diams\ = 5\spades\ + 4\hearts
     \item 3\hearts\ = 6+\spades
-    \item 3\spades\ = 5\spades + 4\clubs
+    \item 3\spades\ = 5\spades\ + 4\clubs
 \end{itemize}
 
 \subsubsection*{Acol interference\\
@@ -514,7 +514,7 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
     \item \pass\ = 5332 12-14
     \item 2\clubs\ = 5\spades\clubs\ 11-15 OR 16+ HCP \fonce
     \item 2\diams\ = 5\spades4\diams\ 11-15
-    \item 2\hearts\ = 5\spades4\hearts 11-15
+    \item 2\hearts\ = 5\spades4\hearts\ 11-15
     \item 2\spades\ = 11-15
     \item 2\ntx\ = 6\spades5\minor\ \gf
     \item 3\clubs\ = 5\spades5\clubs\ \gf
@@ -535,12 +535,12 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
 
 \subsubsection*{1\hearts\ -- 1\ntx\ \\ 2\clubs\ -- ?}
 \begin{itemize}
-    \item 2\diams = 8+
-    \item 2\hearts = 2-3\hearts\ 5-7
-    \item 2\spades = 55\minor\ 5-7
-    \item 2\ntx = 1-\hearts\ 5-7
-    \item 3\clubs = 6+\clubs\ 5-7
-    \item 3\diams = 6+\diams\ 5-7
+    \item 2\diams\ = 8+
+    \item 2\hearts\ = 2-3\hearts\ 5-7
+    \item 2\spades\ = 55\minor\ 5-7
+    \item 2\nt\ = 1-\hearts\ 5-7
+    \item 3\clubs\ = 6+\clubs\ 5-7
+    \item 3\diams\ = 6+\diams\ 5-7
 \end{itemize}
 
 \subsubsection*{1\spades\ -- 1\ntx\ \\ 2\clubs\ -- ?}
@@ -556,7 +556,7 @@ no shortness / lowest shortness / medium shortness / (highest shortness)
 \subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = 5\hearts4\clubs\ 11-15
-    \item 2\spades = 5\hearts, =3\spades\ 16+
+    \item 2\spades\ = 5\hearts, =3\spades\ 16+
     \item 2\ntx\ = 5332 18-20
     \item 3\clubs\ = 5\hearts4\clubs\ 16+
     \item 3\diams\ = 5\hearts4\diams\ 16+
@@ -641,7 +641,7 @@ TBD
 \subsubsection*{(2\hearts) -- 2\ntx\ -- (P) -- ?}
 \begin{itemize}
     \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
-    \item 3\diams\ = 4\spades \gf
+    \item 3\diams\ = 4\spades\ \gf
     \item 3\hearts\ = forces 3\spades, weak or \gf
     \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
     \item 3\nt\ = to play
