--- a/KrysiaBartek2024/source/acol2c.tex
+++ b/KrysiaBartek2024/source/acol2c.tex
@@ -69,10 +69,10 @@ System as after 2\nt\ opening
                 2\spades\ -- 2\ntx \\
                 ?}
 \begin{itemize}
-    \item 3\clubs\ = 5\spades + 4\diams
-    \item 3\diams\ = 5\spades + 4\hearts
+    \item 3\clubs\ = 5\spades\ + 4\diams
+    \item 3\diams\ = 5\spades\ + 4\hearts
     \item 3\hearts\ = 6+\spades
-    \item 3\spades\ = 5\spades + 4\clubs
+    \item 3\spades\ = 5\spades\ + 4\clubs
 \end{itemize}
 
 \subsubsection*{Acol interference\\
