--- a/KrysiaBartek2024/source/gazilli.tex
+++ b/KrysiaBartek2024/source/gazilli.tex
@@ -36,7 +36,7 @@
     \item \pass\ = 5332 12-14
     \item 2\clubs\ = 5\spades\clubs\ 11-15 OR 16+ HCP \fonce
     \item 2\diams\ = 5\spades4\diams\ 11-15
-    \item 2\hearts\ = 5\spades4\hearts 11-15
+    \item 2\hearts\ = 5\spades4\hearts\ 11-15
     \item 2\spades\ = 11-15
     \item 2\ntx\ = 6\spades5\minor\ \gf
     \item 3\clubs\ = 5\spades5\clubs\ \gf
@@ -57,12 +57,12 @@
 
 \subsubsection*{1\hearts\ -- 1\ntx\ \\ 2\clubs\ -- ?}
 \begin{itemize}
-    \item 2\diams = 8+
-    \item 2\hearts = 2-3\hearts\ 5-7
-    \item 2\spades = 55\minor\ 5-7
-    \item 2\ntx = 1-\hearts\ 5-7
-    \item 3\clubs = 6+\clubs\ 5-7
-    \item 3\diams = 6+\diams\ 5-7
+    \item 2\diams\ = 8+
+    \item 2\hearts\ = 2-3\hearts\ 5-7
+    \item 2\spades\ = 55\minor\ 5-7
+    \item 2\nt\ = 1-\hearts\ 5-7
+    \item 3\clubs\ = 6+\clubs\ 5-7
+    \item 3\diams\ = 6+\diams\ 5-7
 \end{itemize}
 
 \subsubsection*{1\spades\ -- 1\ntx\ \\ 2\clubs\ -- ?}
@@ -78,7 +78,7 @@
 \subsubsection*{1\hearts\ -- 1\spades\ \\ 2\clubs\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = 5\hearts4\clubs\ 11-15
-    \item 2\spades = 5\hearts, =3\spades\ 16+
+    \item 2\spades\ = 5\hearts, =3\spades\ 16+
     \item 2\ntx\ = 5332 18-20
     \item 3\clubs\ = 5\hearts4\clubs\ 16+
     \item 3\diams\ = 5\hearts4\diams\ 16+
