--- a/KrysiaBartek2024/source/otherBidsAndRules.tex
+++ b/KrysiaBartek2024/source/otherBidsAndRules.tex
@@ -25,7 +25,7 @@ minors or 3\clubs\ to show clubs.
         What to do next?\\
         \cihandp{T871}{82}{KJ852}{T5}{4}
         Opponents showed \spades-fit, so our partner has at most 1\spades.
-        With 5\hearts he would open 1\hearts, so he has 4\hearts (\dbl\ showed
+        With 5\hearts\ he would open 1\hearts, so he has 4\hearts (\dbl\ showed
         \clubs\ and \hearts). It means that we most probably have fit in \diams.\\
         Correct bid: 3\diams.
     }
