--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -22,7 +22,7 @@
 \subsubsection*{(2\hearts) -- 2\ntx\ -- (P) -- ?}
 \begin{itemize}
     \item 3\clubs\ = forces 3\diams, 1-\hearts \gf OR weak with \diams
-    \item 3\diams\ = 4\spades \gf
+    \item 3\diams\ = 4\spades\ \gf
     \item 3\hearts\ = forces 3\spades, weak or \gf
     \item 3\spades\ = long minor/minors, no \hearts\ shortness, 3\nt\ = ASK
     \item 3\nt\ = to play
