--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -22,7 +22,7 @@
     \item 1\ntx\ = 7-10, no 4\majs
     \item 2\clubs\ = 12-14 BAL or \clubs, \gf
     \item 2\diams\ = no 4\majs, 5+\diams, \gf
-    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ BAL, no 4\majs
     \item 2\ntx\ = 11-12 BAL
     \item 3\nt\ = 15-17 BAL
@@ -35,7 +35,7 @@
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
     \item 2\clubs\ = 12-14 BAL or \clubs, \gf
     \item 2\diams\ = no 4\majs, 4+\diams, \gf
-    \item 2\hearts\ = 5\spades4\hearts 6-9
+    \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ BAL, no 4\majs
     \item 2\ntx\ = 11-12 BAL
     \item 3\nt\ = 15-17 BAL
